--- a/source/index.html
+++ b/source/index.html
@@ -36,17 +36,17 @@
 					<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hi there!, こんにちは!, မင်္ဂလာပါ! 👋</h1>
+							<h1>Hello!, こんにちは!, မင်္ဂလာပါ! 👋</h1>
 							<h2>Lynn Naing Zaw (@NagisaLynn)</h2>
-							<h3>Tech Enthusiast who works in Software, AI/ML, Anime/Manga & Game Development</h3></br>
-							<p>I'm all about kaizen and learning</p>
+							<h3>Tech Enthusiast who love to works in Software, AI/ML, Anime/Manga, Game Design & Development</h3></br>
+							<p>I'm all about 改善 (kaizen) continuous improvement and learning.</p>
 						</div>
 					</section>
 
 					<!-- One : About me -->
 					<section id="one" class="wrapper style2 spotlights">
 						<div class="inner">
-							<h2>My Story</h2>
+							<h2>About me</h2>
 							<p align="left" align='right'>
 								<br>I'm a Tech Enthusiast and Software Architect currently working in Singapore.
 								<br>Third-Generation Chinese, born and raised in Aungban, Southern Shan State, Myanmar. 								
@@ -55,11 +55,10 @@
 							<p align="left" align='right'>
 								<samp> 
 								  <br> 🤪 Personality : INFP (core, natural state), INTJ (working mode) & Enneagram Type 5 Wing 6.
-								  <br> 🔭 Interest : I am currently learning AI 🌐 & Machine Learning 🖥️.
-								  <br> 🚲 Sport : Occasionally Cycling 🚲, Running 🏃, Tennis 🎾.
+								  <br> 🔭 Interest : I am currently learning Machine Learning 🖥️, AI 🌐, Computer Vision 👁️‍🗨️, Process Automation 🤖.
+								  <br> 🎾 Sport : Occasionally Cycling 🚲, Running 🏃, Swimming 🏊.
 								  <br> 🎮 Game : A big fan of Civilization 6, Anno 1800, Monster Hunter, Total War: Warhammer & VR/AR Games.
-								  <br> 🎌 Language : Myanmar 🇲🇲 (Native), English 🇬🇧 & Japanese 🇯🇵 (Professional working Proficiency)
-								  <br> 😎 Attitude : Kaizen, Curious, Jack of all trades with enough invested time, I can be master of all 😎. 
+								  <br> 😎 Attitude : Curious, Kaizen (continuous improvement and learning), Jack of all trades with enough invested time, can be master of all 😎. 
 								</samp> 
 							  </p>
 						</div>
