Add Education Timeline

--- a/source/index.html
+++ b/source/index.html
@@ -68,11 +68,43 @@
 					<section id="two" class="wrapper style2-alt fade-up">
 						<div class="inner">
 							<h2>Education</h2>
-							
+							<div class="timline">
+								<div class="center-line">
+								  <a href="#" class="scroll-icon"><i class="fas fa-caret-up"></i></a>
+								</div>
+								<div class="row row-1">
+								  <section>
+									<i class="icon fas fa-star"></i>
+									<div class="details">
+									  <span class="title">Gusto University</span>
+									  <span>2012 ~ 2014</span>
+									</div>
+									<p>Pearson BTEC Level 5 HND Diploma in Computing and Systems Development (QCF)	
+									</br> Grade : First Class </p>
+									<!-- <div class="bottom">
+										<a href="#">Show credential</a>
+									</div> -->
+								  </section>
+								</div>
+								<div class="row row-2">
+								  <section>
+									<i class="icon fas fa-star"></i>
+									<div class="details">
+									  <span class="title">Coventry University</span>
+									  <span>2016 ~ 2017</span>
+									</div>
+									<p>Bachelor of Science in Computer Science
+									</br>Upper Second Class, GPA (3.3/4)
+									</p>
+									<!-- <div class="bottom">
+										<a href="#">Show credential</a>
+									</div> -->
+								  </section>
+								</div>
 						</div>
 					</section>
 
-					<!-- Three Work Experience -->
+					<!-- Three : Work Experience -->
 					<section id="three" class="wrapper style3 spotlights">
 						<div class="inner">
 							<h2>Work Experience</h2>
@@ -80,15 +112,15 @@
 						</div>
 					</section>
 
-					<!-- Four Projects -->
-					<section id="four" class="wrapper style3-alt fade-up">
+					<!-- Four : Projects -->
+					<!-- <section id="four" class="wrapper style3-alt fade-up">
 						<div class="inner">
 							<h2>Projects</h2>
 							
 						</div>
-					</section>
+					</section> -->
 
-					<!-- Five -->
+					<!-- Five : Contact me-->
 					<section id="five" class="wrapper style1 spotlights">
 						<div class="inner">
 							<h2>GET IN TOUCH</h2>
