--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
 							<li><a href="#one">About me</a></li>
 							<li><a href="#two">Education</a></li>
 							<li><a href="#three">Work Experience</a></li>
-							<li><a href="#four">Projects</a></li>
+							<!-- <li><a href="#four">Projects</a></li> -->
 							<li><a href="#five">Get in touch</a></li>
 						</ul>
 					</nav>
@@ -44,7 +44,7 @@
 					</section>
 
 					<!-- One : About me -->
-					<section id="one" class="wrapper style2 spotlights">
+					<section id="one" class="wrapper style2 fullscreen spotlights">
 						<div class="inner">
 							<h2>About me</h2>
 							<p align="left" align='right'>
@@ -65,7 +65,7 @@
 					</section>
 
 					<!-- Two : Education -->
-					<section id="two" class="wrapper style2-alt fade-up">
+					<section id="two" class="wrapper style2-alt fullscreen fade-up">
 						<div class="inner">
 							<h2>Education</h2>
 							<div class="timline">
@@ -74,9 +74,9 @@
 								</div>
 								<div class="row row-1">
 								  <section>
-									<i class="icon fas fa-star"></i>
+									<i class="icon fas fa-circle"></i>
 									<div class="details">
-									  <span class="title">Gusto University</span>
+									  <span class="title"><i class="fa fa-graduation-cap"></i> Gusto University</span>
 									  <span>2012 ~ 2014</span>
 									</div>
 									<p>Pearson BTEC Level 5 HND Diploma in Computing and Systems Development (QCF)	
@@ -90,10 +90,10 @@
 								  <section>
 									<i class="icon fas fa-star"></i>
 									<div class="details">
-									  <span class="title">Coventry University</span>
+									  <span class="title"><i class="fa fa-graduation-cap"></i> Coventry University</span>
 									  <span>2016 ~ 2017</span>
 									</div>
-									<p>Bachelor of Science in Computer Science
+									<p>Bachelor of Science with Honours in Computer Science
 									</br>Upper Second Class, GPA (3.3/4)
 									</p>
 									<!-- <div class="bottom">
@@ -105,7 +105,7 @@
 					</section>
 
 					<!-- Three : Work Experience -->
-					<section id="three" class="wrapper style3 spotlights">
+					<section id="three" class="wrapper style3 fullscreen spotlights">
 						<div class="inner">
 							<h2>Work Experience</h2>
 							
@@ -121,7 +121,7 @@
 					</section> -->
 
 					<!-- Five : Contact me-->
-					<section id="five" class="wrapper style1 spotlights">
+					<section id="five" class="wrapper style1 fullscreen spotlights">
 						<div class="inner">
 							<h2>GET IN TOUCH</h2>
 							<p>Reach out to me and let's get in touch </p>
