--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
 -->
 <html lang="en">
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Lynn Naing Zaw</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,11 +20,11 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">About me</a></li>
-							<li><a href="#two">Education</a></li>
-							<li><a href="#three">Work Experience</a></li>
-							<!-- <li><a href="#four">Projects</a></li> -->
-							<li><a href="#five">Get in touch</a></li>
+							<li><a href="#abome">About me</a></li>
+							<li><a href="#educa">Education</a></li>
+							<li><a href="#worke">Work Experience</a></li>
+							<!-- <li><a href="#projs">Projects</a></li> -->
+							<li><a href="#conta">Get in touch</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -43,13 +43,14 @@
 						</div>
 					</section>
 
-					<!-- One : About me -->
-					<section id="one" class="wrapper style2 fullscreen spotlights">
+					<!-- abome : About me -->
+					<section id="abome" class="wrapper style2 fullscreen spotlights">
 						<div class="inner">
 							<h2>About me</h2>
 							<p align="left" align='right'>
 								<br>I'm a Tech Enthusiast and Software Architect currently working in Singapore.
-								<br>Third-Generation Chinese, born and raised in Aungban, Southern Shan State, Myanmar. 								
+								<br>Third-Generation Chinese, born and raised in Aungban, Southern Shan State, Myanmar. 
+								<br>Have more than 5 years professional development experience in software application development(mobile, window, web, api, database) in all stages of software development life cycle.								
 							</p>
 
 							<p align="left" align='right'>
@@ -58,14 +59,15 @@
 								  <br> 🔭 Interest : I am currently learning Machine Learning 🖥️, AI 🌐, Computer Vision 👁️‍🗨️, Process Automation 🤖.
 								  <br> 🎾 Sport : Occasionally Cycling 🚲, Running 🏃, Swimming 🏊.
 								  <br> 🎮 Game : A big fan of Civilization 6, Anno 1800, Monster Hunter, Total War: Warhammer & VR/AR Games.
+								  <br> 🎌 Language : Myanmar 🇲🇲 (Native), English 🇬🇧 (Professional working Proficiency) & Japanese 🇯🇵 (Professional working Proficiency).
 								  <br> 😎 Attitude : Curious, Kaizen (continuous improvement and learning), Jack of all trades with enough invested time, can be master of all 😎. 
 								</samp> 
 							  </p>
 						</div>
 					</section>
 
-					<!-- Two : Education -->
-					<section id="two" class="wrapper style2-alt fullscreen fade-up">
+					<!-- educa : Education -->
+					<section id="educa" class="wrapper style2-alt fullscreen fade-up">
 						<div class="inner">
 							<h2>Education</h2>
 							<div class="timline">
@@ -88,7 +90,7 @@
 								</div>
 								<div class="row row-2">
 								  <section>
-									<i class="icon fas fa-star"></i>
+									<i class="icon fas fa-circle"></i>
 									<div class="details">
 									  <span class="title"><i class="fa fa-graduation-cap"></i> Coventry University</span>
 									  <span>2016 ~ 2017</span>
@@ -101,27 +103,90 @@
 									</div> -->
 								  </section>
 								</div>
+								<div class="row row-1">
+									<section>
+									  <i class="icon fas fa-star"></i>
+									  <div class="details">
+										<span class="title"><i class="fa fa-graduation-cap"></i> Self-Independent Study</span>
+										<span>Present</span>
+									  </div>
+									  <p>Lifelong self-independent study in various topics and subjects lead by curiosity. 
+									  </br>Kaizen my skill and knowledge to become the Jack of all trades, master of all. 
+									  <!-- <div class="bottom">
+										  <a href="#">Show credential</a>
+									  </div> -->
+									</section>
+								  </div>
+								</br>
+							</div>
 						</div>
 					</section>
 
-					<!-- Three : Work Experience -->
-					<section id="three" class="wrapper style3 fullscreen spotlights">
+					<!-- worke : Work Experience -->
+					<section id="worke" class="wrapper style2 fullscreen spotlights">
 						<div class="inner">
 							<h2>Work Experience</h2>
+							<div class="timline">
+								<div class="center-line">
+								  <a href="#" class="scroll-icon"><i class="fas fa-caret-up"></i></a>
+								</div>
+								<div class="row row-1">
+									<section>
+									  <i class="icon fas fa-star"></i>
+									  <h3>Prima Computer Systems, Singapore</h3>
+									  <div class="details">
+										<span class="title"></i> Software Programmer</span>
+										<span>Nov 2017 ~ Oct 2021</span>
+									  </div>
+									  <p> Cross-platform mobile application development for Android, iOS & Full-stack web application development using microsoft ecosystem with C#.
+									  </br> Development Stack: C#, Xamarin, Microsoft SQL Server, Swagger, ASP.NET
+									  </p>
+
+									  <div class="details">
+										<span class="title"></i> Software Architect</span>
+										<span>Oct 2021 ~ Present</span>
+									  </div>
+									  <p> Process automation, UI/UX design, application architect plus previous job scopes and responsibilty.
+									  </br> Development Stack: C#, .NET MAUI, Blazor, Microsoft SQL Server, OpenAPI
+									  </p>
+									  <!-- <div class="bottom">
+										  <a href="#">Show credential</a>
+									  </div> -->
+									</section>
+								</div>
+
+								<div class="row row-1">
+									<section>
+									  <i class="icon fas fa-star"></i>
+									  <div class="details">
+										<span class="title"></i> Open Source Development & Personal Projects</span>
+										<span>Present</span>
+									  </div>
+									  <p>Open source contribution & personal projects <a href="">@ Github</a> in various topics and subjects, lead by curiosity. 
+									  </br>Kaizen my skill and knowledge to become the Jack of all trades, master of all. 
+									  <!-- <div class="bottom">
+										  <a href="#">Show credential</a>
+									  </div> -->
+									</section>
+								</div>
+
+								</br>
+							</div>
+
 							
 						</div>
 					</section>
 
-					<!-- Four : Projects -->
-					<!-- <section id="four" class="wrapper style3-alt fade-up">
+					<!-- projs : Projects -->
+					<!-- <section id="projs" class="wrapper style3-alt fade-up">
 						<div class="inner">
 							<h2>Projects</h2>
 							
 						</div>
 					</section> -->
 
-					<!-- Five : Contact me-->
-					<section id="five" class="wrapper style1 fullscreen spotlights">
+					<!-- conta : Contact me-->
+					<section id="conta" class="wrapper style1 fullscreen spotlights">
 						<div class="inner">
 							<h2>GET IN TOUCH</h2>
 							<p>Reach out to me and let's get in touch </p>
@@ -151,6 +216,7 @@
 									<h3>Other links</h3>
 									<li><a href="https://www.coursera.org/user/ad626ff97cae76d42ef9406baea2fd4c">Coursera</span></a></li>
 									<li><a href="https://www.kaggle.com/nagisalynn">Kaggle</span></a></li>
+									<li><a href="https://www.credly.com/users/lynn-naing-zaw">Credly</span></a></li>
 								</section>
 							</div>
 						</div>
