--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html lang="en">
 	<head>
-		<title>Lynn Naing Zaw</title>
+		<title>lynnnaing.dev</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,11 +20,14 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#abome">About me</a></li>
-							<li><a href="#educa">Education</a></li>
-							<li><a href="#worke">Work Experience</a></li>
+							<li><a href="#about">About me</a></li>
+							<li><a href="#educs">Education</a></li>
+							<li><a href="#works">Work Experience</a></li>
+							<!-- <li><a href="#skill">Skils</a></li>
+							<li><a href="#techs">Tech Stack</a></li> -->
 							<!-- <li><a href="#projs">Projects</a></li> -->
-							<li><a href="#conta">Get in touch</a></li>
+							<!-- <li><a href="#tline">Timeline</a></li> -->
+							<li><a href="#conts">Get in touch</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -43,8 +46,8 @@
 						</div>
 					</section>
 
-					<!-- abome : About me -->
-					<section id="abome" class="wrapper style2 fullscreen spotlights">
+					<!-- about : About me -->
+					<section id="about" class="wrapper style2 fullscreen spotlights">
 						<div class="inner">
 							<h2>About me</h2>
 							<p align="left" align='right'>
@@ -66,15 +69,15 @@
 						</div>
 					</section>
 
-					<!-- educa : Education -->
-					<section id="educa" class="wrapper style2-alt fullscreen fade-up">
+					<!-- educs : Education -->
+					<section id="educs" class="wrapper style2-alt fullscreen fade-up">
 						<div class="inner">
 							<h2>Education</h2>
 							<div class="timline">
 								<div class="center-line">
 								  <a href="#" class="scroll-icon"><i class="fas fa-caret-up"></i></a>
 								</div>
-								<div class="row row-1">
+								<div class="row rows">
 								  <section>
 									<i class="icon fas fa-circle"></i>
 									<div class="details">
@@ -88,7 +91,7 @@
 									</div> -->
 								  </section>
 								</div>
-								<div class="row row-2">
+								<div class="row rows">
 								  <section>
 									<i class="icon fas fa-circle"></i>
 									<div class="details">
@@ -103,7 +106,7 @@
 									</div> -->
 								  </section>
 								</div>
-								<div class="row row-1">
+								<div class="row rows">
 									<section>
 									  <i class="icon fas fa-star"></i>
 									  <div class="details">
@@ -122,15 +125,15 @@
 						</div>
 					</section>
 
-					<!-- worke : Work Experience -->
-					<section id="worke" class="wrapper style2 fullscreen spotlights">
+					<!-- works : Work Experience -->
+					<section id="works" class="wrapper style2 fullscreen spotlights">
 						<div class="inner">
 							<h2>Work Experience</h2>
 							<div class="timline">
 								<div class="center-line">
 								  <a href="#" class="scroll-icon"><i class="fas fa-caret-up"></i></a>
 								</div>
-								<div class="row row-1">
+								<div class="row rows">
 									<section>
 									  <i class="icon fas fa-star"></i>
 									  <h3>Prima Computer Systems, Singapore</h3>
@@ -155,7 +158,7 @@
 									</section>
 								</div>
 
-								<div class="row row-1">
+								<div class="row rows">
 									<section>
 									  <i class="icon fas fa-star"></i>
 									  <div class="details">
@@ -185,11 +188,54 @@
 						</div>
 					</section> -->
 
-					<!-- conta : Contact me-->
-					<section id="conta" class="wrapper style1 fullscreen spotlights">
+					<!-- techs : Tech Stack-->
+					<!-- <section id="techs" class="wrapper style3 fade-up">
+						<div class="inner">
+							<h2>Tech Stack</h2>
+							<p></p>
+							<div class="features">
+								<section>
+									<span class="icon solid major fa-code"></span>
+									<h3>Lorem ipsum amet</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-lock"></span>
+									<h3>Aliquam sed nullam</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-cog"></span>
+									<h3>Sed erat ullam corper</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-desktop"></span>
+									<h3>Veroeros quis lorem</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+								<section>
+									<span class="icon solid major fa-link"></span>
+									<h3>Urna quis bibendum</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+								<section>
+									<span class="icon major fa-gem"></span>
+									<h3>Aliquam urna dapibus</h3>
+									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+								</section>
+							</div>
+							<ul class="actions">
+								<li><a href="generic.html" class="button">Learn more</a></li>
+							</ul>
+						</div>
+					</section> -->
+
+					<!-- conts : Contact me-->
+					<section id="conts" class="wrapper style1 spotlights">
 						<div class="inner">
 							<h2>GET IN TOUCH</h2>
-							<p>Reach out to me and let's get in touch </p>
+							<p>Please reach out to me and let's get in touch.</p>
 							<div class="split style1">
 								<section>
 									<ul class="contact">
@@ -216,9 +262,12 @@
 									<h3>Other links</h3>
 									<li><a href="https://www.coursera.org/user/ad626ff97cae76d42ef9406baea2fd4c">Coursera</span></a></li>
 									<li><a href="https://www.kaggle.com/nagisalynn">Kaggle</span></a></li>
-									<li><a href="https://www.credly.com/users/lynn-naing-zaw">Credly</span></a></li>
+									<!-- <li><a href="https://www.credly.com/users/lynn-naing-zaw">Credly</span></a></li>
+									<li><a href="https://public.tableau.com/app/profile/lynn.naing.zaw">Tableau</span></a></li> -->
+									
 								</section>
 							</div>
+							<p>Thanks you for visiting my web portfilio.</p>
 						</div>
 					</section>
 			</div>
